# qtxmlpatterns

./: .gitignore  .gitmodules  .qmake.conf  qtxmlpatterns.pro  sync.profile
doc/: qt5-dita.qdocconf  qt5.qdocconf
doc/global/: qt-html-templates-offline.qdocconf
doc/src/examples/: filetree.qdoc  globalVariables.qdoc  recipes.qdoc  schema.qdoc  trafficinfo.qdoc
doc/src/xml-processing/: xml-patterns.qdoc  xml-processing.qdoc  xquery-introduction.qdoc
examples/xmlpatterns/: README  xmlpatterns.pro
examples/xmlpatterns/filetree/: filetree.cpp  filetree.h  filetree.pro  main.cpp  mainwindow.cpp  mainwindow.h
examples/xmlpatterns/recipes/: main.cpp  querymainwindow.cpp  querymainwindow.h  recipes.pro
examples/xmlpatterns/schema/: main.cpp  mainwindow.cpp  mainwindow.h  schema.pro
examples/xmlpatterns/shared/: xmlsyntaxhighlighter.cpp  xmlsyntaxhighlighter.h
examples/xmlpatterns/trafficinfo/: main.cpp  mainwindow.cpp  mainwindow.h  stationdialog.cpp  stationdialog.h  stationquery.cpp  stationquery.h  timequery.cpp  timequery.h  trafficinfo.pro
modules/: qt_xmlpatterns.pri
src/xmlpatterns/: Mainpage.dox  configure.json  documentationGroups.dox  xmlpatterns.pro
tests/: tests.pro
tests/auto/: auto.pro  network-settings.h  xmlpatterns.pri
tests/auto/cmake/test_modules/: CMakeLists.txt  main.cpp
tools/: tools.pro
tools/xmlpatterns/: main.cpp  main.h  qapplicationargument.cpp  qapplicationargument_p.h  qapplicationargumentparser.cpp  qapplicationargumentparser_p.h  xmlpatterns.pro
tools/xmlpatternsvalidator/: main.cpp  main.h  xmlpatternsvalidator.pro
(+919 files in other folders)
